Update EventsManager.java